--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ html{
   }
   .menu_button {
     color: #fff;
+    position: relative
+    top: 50px
+    right: 50px
     font-size: 16px;
     font-weight: bold;
     background: #333;
