--- a/style.css
+++ b/style.css
@@ -91,3 +91,12 @@
     transform: translateX(0);
   }
 
+  .circle{
+    position: relative;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border:solid;
+    border-color: #60CAAD;
+    background: #e9e9e9;
+  }
