--- a/style.css
+++ b/style.css
@@ -9,6 +9,45 @@
     font-family: 'Titillium Web', sans-serif;
   }
 
+  #loading-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #3e99c4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+    z-index: 9999;
+  }
+
+  .loader {
+    width: 100px;
+    height: 100px;
+    margin: 200px auto;
+    background-color: #fff;
+    border-radius: 100%;
+    animation-name: loading;
+    animation-duration: 1.0s;
+    animation-iteration-count: infinite;
+    transition: EaseInOut;
+  }
+  @keyframes loading {
+    0% {
+      transform: scale(0);
+    } 100% {
+      transform: scale(1.0);
+      opacity: 0;
+    }
+  }
+  .loaded{
+    opacity: 0;
+    visibility: hidden;
+  }
+
   p{
     color: lime;
   }
@@ -17,6 +56,7 @@
     text-align: center;
     line-height: 200%;
   }
+
 
   .link-character{
     color:#00ffff;
